--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -181,18 +181,21 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Object\Object.cuh" />
     <ClInclude Include="Source Files\Engine Core\Object\ObjLoader.h" />
     <ClInclude Include="Source Files\Engine Core\Object\Vertex.h" />
+    <ClInclude Include="Source Files\Engine Core\Scene\ObjectSceneAbstraction.cuh" />
+    <ClInclude Include="Source Files\Engine Core\Scene\Scene.cuh" />
     <ClInclude Include="Source Files\Engine Core\Settings.h" />
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputHelper.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
+    <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh" />
     <ClInclude Include="Source Files\Ray Engine\Ray.cuh" />
-    <ClInclude Include="Source Files\Ray Engine\RayEngine.cuh" />
     <ClInclude Include="Source Files\Ray Engine\RayEngine.h" />
     <ClInclude Include="Source Files\Ray Engine\RayJob.cuh" />
     <ClInclude Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPTracer.h" />
     <ClInclude Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.h" />
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
     <ClInclude Include="Source Files\Renderer\Renderer.h" />
+    <ClInclude Include="Source Files\Resources\Objects\Hand.h" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\HelperClasses.cuh" />
     <ClInclude Include="Source Files\Utility\OpenGL\GLError.h" />
@@ -221,6 +224,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.cpp" />
     <ClCompile Include="Source Files\Renderer\Renderer.cpp" />
+    <ClCompile Include="Source Files\Resources\Objects\Hand.cpp" />
     <ClCompile Include="Source Files\Utility\OpenGL\GLError.cpp" />
     <ClCompile Include="Source Files\Utility\OpenGL\Shader.cpp" />
     <ClCompile Include="Source Files\Utility\OpenGL\ShaderSupport.cpp" />
@@ -231,6 +235,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\BoundingBox.cu" />
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\Node.cu" />
     <CudaCompile Include="Source Files\Engine Core\Camera\CUDA\Camera.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Scene\ObjectSceneAbstraction.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Scene\Scene.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\RayJob.cu" />
