--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="Engine Backend\Ray Engine\CUDA">
       <UniqueIdentifier>{06e63914-1f43-4a10-a875-67a72522bc8c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Utility\OpenCL">
+      <UniqueIdentifier>{3dbfc2b1-da51-4160-a70c-e684ce58d8b1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -189,9 +192,6 @@
     <ClInclude Include="Source Files\Ray Engine\Ray.cuh">
       <Filter>Engine Backend\Ray Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Utility\CUDA\HelperClasses.cuh">
-      <Filter>Engine Backend\Utility\CUDA</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh">
       <Filter>Engine Backend\Utility\CUDA</Filter>
     </ClInclude>
@@ -230,6 +230,12 @@
     </ClInclude>
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh">
       <Filter>Engine Backend\Ray Engine\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\CUDA\CudaHelper.cuh">
+      <Filter>Engine Backend\Utility\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h">
+      <Filter>Engine Backend\Utility\OpenCL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -319,9 +325,6 @@
     <CudaCompile Include="Source Files\Ray Engine\Ray.cu">
       <Filter>Engine Backend\Ray Engine</Filter>
     </CudaCompile>
-    <CudaCompile Include="Source Files\Utility\CUDA\HelperClasses.cu">
-      <Filter>Engine Backend\Utility\CUDA</Filter>
-    </CudaCompile>
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu">
       <Filter>Engine Backend\Utility\CUDA</Filter>
     </CudaCompile>
@@ -345,6 +348,12 @@
     </CudaCompile>
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu">
       <Filter>Engine Backend\Ray Engine\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Utility\CUDA\CudaHelper.cu">
+      <Filter>Engine Backend\Utility\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl">
+      <Filter>Engine Backend\Utility\OpenCL</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
