more opencl changes

--- a/Soul Engine/Soul Engine.vcxproj.filters
+++ b/Soul Engine/Soul Engine.vcxproj.filters
@@ -130,6 +130,18 @@
     <Filter Include="Engine Backend\Engine Core\Scene\OpenCL">
       <UniqueIdentifier>{c470a225-3d46-4427-8354-eaeb6003877d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine Backend\Engine Core\Object\CUDA">
+      <UniqueIdentifier>{50de5427-8eec-4231-9488-40e20840a3ef}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine Backend\Engine Core\Object\OpenCL">
+      <UniqueIdentifier>{376f53cf-5ebf-4803-8e46-5715d3054051}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine Backend\Bounding Volume Heirarchy\OpenCL">
+      <UniqueIdentifier>{2207715d-2b00-4543-a694-cb352197ef0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine Backend\Ray Engine\OpenCL">
+      <UniqueIdentifier>{33124da9-5927-48f7-b83d-b4dfc8d964c9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Engine Core\BasicDependencies.h">
@@ -186,26 +198,14 @@
     <ClInclude Include="Source Files\Bounding Volume Heirarchy\BVH.h">
       <Filter>Engine Backend\Bounding Volume Heirarchy</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Engine Core\Object\Vertex.h">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Files\Engine Core\Object\Face.h">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\QuickSort.h">
       <Filter>Engine Backend\Algorithms\Data Algorithms\GPU Quicksort</Filter>
     </ClInclude>
     <ClInclude Include="Include Files\SoulCore.h">
       <Filter>Engine Frontend</Filter>
     </ClInclude>
-    <ClInclude Include="Source Files\Ray Engine\Ray.cuh">
-      <Filter>Engine Backend\Ray Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh">
       <Filter>Engine Backend\Utility\CUDA</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Files\Ray Engine\RayJob.cuh">
-      <Filter>Engine Backend\Ray Engine</Filter>
     </ClInclude>
     <ClInclude Include="Source Files\Engine Core\Camera\CUDA\Camera.cuh">
       <Filter>Engine Backend\Engine Core\Camera\CUDA</Filter>
@@ -218,9 +218,6 @@
     </ClInclude>
     <ClInclude Include="Source Files\Bounding Volume Heirarchy\CUDA\BoundingBox.cuh">
       <Filter>Engine Backend\Bounding Volume Heirarchy\CUDA</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Files\Engine Core\Object\Object.cuh">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
     </ClInclude>
     <ClInclude Include="Source Files\Engine Core\Object\ObjLoader.h">
       <Filter>Engine Backend\Engine Core\Object</Filter>
@@ -260,6 +257,54 @@
     </ClInclude>
     <ClInclude Include="Source Files\Engine Core\Scene\OpenCL\CLScene.h">
       <Filter>Engine Backend\Engine Core\Scene\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Face.cuh">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Object.cuh">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Vertex.cuh">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLFace.h">
+      <Filter>Engine Backend\Engine Core\Object\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLVertex.h">
+      <Filter>Engine Backend\Engine Core\Object\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLObject.h">
+      <Filter>Engine Backend\Engine Core\Object\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\Face.h">
+      <Filter>Engine Backend\Engine Core\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\Object.h">
+      <Filter>Engine Backend\Engine Core\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Engine Core\Object\Vertex.h">
+      <Filter>Engine Backend\Engine Core\Object</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\CUDA\RayJob.cuh">
+      <Filter>Engine Backend\Ray Engine\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\CUDA\Ray.cuh">
+      <Filter>Engine Backend\Ray Engine\CUDA</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRay.h">
+      <Filter>Engine Backend\Ray Engine\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRayJob.h">
+      <Filter>Engine Backend\Ray Engine\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRayEngine.h">
+      <Filter>Engine Backend\Ray Engine\OpenCL</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\RayJob.h">
+      <Filter>Engine Backend\Ray Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Ray Engine\Ray.h">
+      <Filter>Engine Backend\Ray Engine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -311,12 +356,6 @@
     <ClCompile Include="Source Files\Bounding Volume Heirarchy\BVH.cpp">
       <Filter>Engine Backend\Bounding Volume Heirarchy</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Engine Core\Object\Vertex.cpp">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Files\Engine Core\Object\Face.cpp">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
-    </ClCompile>
     <ClCompile Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\QuickSort.cpp">
       <Filter>Engine Backend\Algorithms\Data Algorithms\GPU Quicksort</Filter>
     </ClCompile>
@@ -325,9 +364,6 @@
     </ClCompile>
     <ClCompile Include="Source Files\Multithreading\Scheduler.cpp">
       <Filter>Engine Backend\Multithreading</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Files\Engine Core\Object\Object.cu">
-      <Filter>Engine Backend\Engine Core\Object</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Engine Core\Object\ObjLoader.cpp">
       <Filter>Engine Backend\Engine Core\Object</Filter>
@@ -346,14 +382,8 @@
     <CudaCompile Include="Source Files\Algorithms\Data Algorithms\GPU Quicksort\CUDA\Quicksort.cu">
       <Filter>Engine Backend\Algorithms\Data Algorithms\GPU Quicksort\CUDA</Filter>
     </CudaCompile>
-    <CudaCompile Include="Source Files\Ray Engine\Ray.cu">
-      <Filter>Engine Backend\Ray Engine</Filter>
-    </CudaCompile>
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu">
       <Filter>Engine Backend\Utility\CUDA</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Source Files\Ray Engine\RayJob.cu">
-      <Filter>Engine Backend\Ray Engine</Filter>
     </CudaCompile>
     <CudaCompile Include="Source Files\Engine Core\Camera\CUDA\Camera.cu">
       <Filter>Engine Backend\Engine Core\Camera\CUDA</Filter>
@@ -378,6 +408,21 @@
     </CudaCompile>
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Scene.cu">
       <Filter>Engine Backend\Engine Core\Scene\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Face.cu">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Object.cu">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Vertex.cu">
+      <Filter>Engine Backend\Engine Core\Object\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu">
+      <Filter>Engine Backend\Ray Engine\CUDA</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu">
+      <Filter>Engine Backend\Ray Engine\CUDA</Filter>
     </CudaCompile>
   </ItemGroup>
   <ItemGroup>
