--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -179,9 +179,15 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Engine Core\Material\Texture\Bitmap.h" />
     <ClInclude Include="Source Files\Engine Core\Material\Texture\Texture.h" />
     <ClInclude Include="Source Files\Engine Core\Object\Character\Character.h" />
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Face.cuh" />
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Object.cuh" />
+    <ClInclude Include="Source Files\Engine Core\Object\CUDA\Vertex.cuh" />
     <ClInclude Include="Source Files\Engine Core\Object\Face.h" />
-    <ClInclude Include="Source Files\Engine Core\Object\Object.cuh" />
+    <ClInclude Include="Source Files\Engine Core\Object\Object.h" />
     <ClInclude Include="Source Files\Engine Core\Object\ObjLoader.h" />
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLFace.h" />
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLObject.h" />
+    <ClInclude Include="Source Files\Engine Core\Object\OpenCL\CLVertex.h" />
     <ClInclude Include="Source Files\Engine Core\Object\Vertex.h" />
     <ClInclude Include="Source Files\Engine Core\Scene\CUDA\ObjectSceneAbstraction.cuh" />
     <ClInclude Include="Source Files\Engine Core\Scene\CUDA\Scene.cuh" />
@@ -191,10 +197,15 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Input\Input.h" />
     <ClInclude Include="Source Files\Input\InputHelper.h" />
     <ClInclude Include="Source Files\Multithreading\Scheduler.h" />
+    <ClInclude Include="Source Files\Ray Engine\CUDA\Ray.cuh" />
     <ClInclude Include="Source Files\Ray Engine\CUDA\RayEngine.cuh" />
-    <ClInclude Include="Source Files\Ray Engine\Ray.cuh" />
+    <ClInclude Include="Source Files\Ray Engine\CUDA\RayJob.cuh" />
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRay.h" />
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRayEngine.h" />
+    <ClInclude Include="Source Files\Ray Engine\OpenCL\CLRayJob.h" />
+    <ClInclude Include="Source Files\Ray Engine\Ray.h" />
     <ClInclude Include="Source Files\Ray Engine\RayEngine.h" />
-    <ClInclude Include="Source Files\Ray Engine\RayJob.cuh" />
+    <ClInclude Include="Source Files\Ray Engine\RayJob.h" />
     <ClInclude Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPTracer.h" />
     <ClInclude Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.h" />
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
@@ -216,10 +227,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Source Files\Engine Core\Material\Texture\Bitmap.cpp" />
     <ClCompile Include="Source Files\Engine Core\Material\Texture\Texture.cpp" />
     <ClCompile Include="Source Files\Engine Core\Object\Character\Character.cpp" />
-    <ClCompile Include="Source Files\Engine Core\Object\Face.cpp" />
-    <ClCompile Include="Source Files\Engine Core\Object\Object.cu" />
     <ClCompile Include="Source Files\Engine Core\Object\ObjLoader.cpp" />
-    <ClCompile Include="Source Files\Engine Core\Object\Vertex.cpp" />
     <ClCompile Include="Source Files\Engine Core\Settings.cpp" />
     <ClCompile Include="Source Files\Engine Core\SoulCore.cpp" />
     <ClCompile Include="Source Files\Input\Input.cpp" />
@@ -241,11 +249,14 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\BoundingBox.cu" />
     <CudaCompile Include="Source Files\Bounding Volume Heirarchy\CUDA\Node.cu" />
     <CudaCompile Include="Source Files\Engine Core\Camera\CUDA\Camera.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Face.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Object.cu" />
+    <CudaCompile Include="Source Files\Engine Core\Object\CUDA\Vertex.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\ObjectSceneAbstraction.cu" />
     <CudaCompile Include="Source Files\Engine Core\Scene\CUDA\Scene.cu" />
+    <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
-    <CudaCompile Include="Source Files\Ray Engine\Ray.cu" />
-    <CudaCompile Include="Source Files\Ray Engine\RayJob.cu" />
+    <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAHelper.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu" />
     <CudaCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl" />
