--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -211,8 +211,12 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
     <ClInclude Include="Source Files\Renderer\Renderer.h" />
     <ClInclude Include="Source Files\Resources\Objects\Hand.h" />
+    <ClInclude Include="Source Files\Utility\CUDAIncludes.h" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAHelper.cuh" />
     <ClInclude Include="Source Files\Utility\CUDA\CUDAManaged.cuh" />
+    <ClInclude Include="Source Files\Utility\GLMIncludes.h" />
+    <ClInclude Include="Source Files\Utility\GPUIncludes.h" />
+    <ClInclude Include="Source Files\Utility\OpenCLIncludes.h" />
     <ClInclude Include="Source Files\Utility\OpenCL\OpenCLHelper.h" />
     <ClInclude Include="Source Files\Utility\OpenGL\GLError.h" />
     <ClInclude Include="Source Files\Utility\OpenGL\Shader.h" />
@@ -259,7 +263,9 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAHelper.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu" />
-    <CudaCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl" />
+    <ClCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl">
+      <FileType>Document</FileType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader[Renderer].txt" />
