--- a/Soul Engine/Soul Engine.vcxproj
+++ b/Soul Engine/Soul Engine.vcxproj
@@ -219,6 +219,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClInclude Include="Source Files\Ray Engine\RayEngine.h" />
     <ClInclude Include="Source Files\Ray Engine\RayJob.h" />
     <ClInclude Include="Source Files\Renderer\Bidirectional Path Tracer\CUDA\BDPTracer.h" />
+    <ClInclude Include="Source Files\Renderer\CUDA\Renderer.cuh" />
     <ClInclude Include="Source Files\Renderer\Path Tracer\CUDA\PTracer.h" />
     <ClInclude Include="Source Files\Renderer\Ray Tracer\CUDA\RayTracer.h" />
     <ClInclude Include="Source Files\Renderer\Renderer.h" />
@@ -274,6 +275,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <CudaCompile Include="Source Files\Ray Engine\CUDA\Ray.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayEngine.cu" />
     <CudaCompile Include="Source Files\Ray Engine\CUDA\RayJob.cu" />
+    <CudaCompile Include="Source Files\Renderer\CUDA\Renderer.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAHelper.cu" />
     <CudaCompile Include="Source Files\Utility\CUDA\CUDAManaged.cu" />
     <ClCompile Include="Source Files\Utility\OpenCL\OpenCLHelper.cl">
