--- a/Soul Engine/PropertySheet.props
+++ b/Soul Engine/PropertySheet.props
@@ -49,8 +49,9 @@
       <FastMath>true</FastMath>
       <UseHostInclude>true</UseHostInclude>
       <Optimization>O3</Optimization>
-      <RuntimeChecks>Default</RuntimeChecks>
-      <TypeInfo>false</TypeInfo>
+      <TypeInfo>InheritFromHost</TypeInfo>
+      <HostDebugInfo>false</HostDebugInfo>
+      <RuntimeChecks>InheritFromHost</RuntimeChecks>
     </CudaCompile>
     <CudaLink>
       <Optimization>O3</Optimization>
