--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ Soul Engine/x64/Debug/Soul Engine/Soul Engine.tlog/CL.read.1.tlog
 Soul Engine/x64/Debug/Soul Engine/Soul Engine.tlog/cl.command.1.tlog
 *.command.1.tlog
 *.cu.deps
+x64/Release/cudart32_75.dll
+x64/Release/cudart64_75.dll
